--- a/settings.json
+++ b/settings.json
@@ -2,6 +2,10 @@
     "workbench.colorTheme": "Omni",
     "workbench.iconTheme": "material-icon-theme",
 
+    "editor.fontFamily": "Fira Code",
+    "editor.fontLigatures": true,
+    "editor.fontSize": 16,
+
     "explorer.compactFolders": false,
     "editor.renderLineHighlight": "gutter",
     "editor.renderLineHighlight": "gutter",
